--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /vitepress/docs/.vitepress/cache/
 /vitepress/docs/.vitepress/dist/
 /vitepress/node_modules/
+/docs/.vitepress/cache
+/docs/.vitepress/dist
